--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,13 +3,34 @@
 @tailwind utilities;
 
 
-
-
-
 body {
- padding: 0;
- margin: 0;
- box-sizing: border-box;
-}
-
-
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+   }
+   
+   /* width */
+   ::-webkit-scrollbar {
+     width: 7px;
+     height: 7px;
+     background: rgba(0, 0, 0, 0.1) ;
+   }
+/* Track */
+::-webkit-scrollbar-track {
+    background: rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
+  
+  
+  
